# Woogine

./: .gitignore  CMakeLists.txt
data/: cube.data  entities.data  quad.data
shaders/: background.fs.glsl  fragment_shader.glsl  text.fs.glsl  text.vs.glsl  vertex_shader.glsl
src/: CMakeLists.txt  camera.cc  camera.h  core.cc  core.h  debug.cc  debug.h  entity.cc  entity.h  entitycreator.cc  entitycreator.h  entitycreatorexc.h  entityresources.h  fsresolver.cc  fsresolverexception.h  imageloader.cc  imageloader.h  mesh.h  meshdatareader.cc  meshdatareader.h  meshrawdata.h  objloader.cc  program.h  programdatareader.cc  programrawdata.h  renderer.cc  renderer.h  resourcemanager.cc  resourcemanager.h  scene.cc  scene.h  sprite.cc  sprite.h  spritedatareader.cc  spritedatareader.h  stringutl.cc  stringutl.h  text.h  textmanager.cc  textmanager.h  (+7 more)
src/camera/: CMakeLists.txt  abstractcamera.h  camera.cc  camera.h
src/controller/: CMakeLists.txt  abstractcontroller.h  controller.cc  controller.h
src/debug/: CMakeLists.txt
src/defs/: CMakeLists.txt
src/entity/: CMakeLists.txt  abstractentity.h  abstractvisualentity.h  entity.cc  entity.h
src/exceptions/: CMakeLists.txt  datareaderexception.h  resourcemanagerexception.h
src/input/: CMakeLists.txt  input.cc  input.h  keys.h
src/math/: CMakeLists.txt  point.hpp
test/: CMakeLists.txt  Makefile  imageloader.cc  imageloadertest  imageloadertest.cc  main.cc  objloader.h  objloadertest  objloadertest.cc  spritedatareadertest  spritedatareadertest.cc  test  textmanagertest  textmanagertest.cc  tmp.cc
(+43 files in other folders)
